fix: changed highlight color to default, cause breaks in dark themes

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,12 @@
   --surface-shadow: 0 2px 12px rgba(0, 0, 0, 0.25);
 
   --color-surface: var(--toolbar-bgcolor);
-  --color-surface-highlight: var(
-    --lwt-toolbar-field-highlight,
-    var(--urlbarView-hover-background)
-  );
+  --color-surface-highlight: var(--urlbarView-hover-background);
+  /* TODO: make highlight color matches the theme */
+  /* --color-surface-highlight: var( */
+  /* --lwt-accent-color, */
+  /* var(--urlbarView-hover-background) */
+  /* ); */
   --color-stroke: var(--urlbarView-hover-background);
   --color-text: var(--lwt-text-color, var(--toolbar-color));
 }
